Zmiana sposobu zapisu plikow

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -29,6 +29,10 @@ security:
     basic:
         enabled: false
 
+
+multipart:
+    maxFileSize: 20Mb
+
 # ===================================================================
 # JHipster specific properties
 # ===================================================================
