--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Sat Oct 24 23:30:52 CEST 2015
+#Sun Oct 25 20:13:49 CET 2015
 0=JHipster H2 (Embedded)|org.h2.Driver|jdbc\:h2\:mem\:jhipster|
 webAllowOthers=false
 webPort=8082
