Przycisk dodawania do góry

--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,5 @@ obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
-src/main/resources/.h2.server.properties
+src/main/resources/\.h2\.server.properties
 src/main/resources/.h2.server.properties
